Fix spacing of search headers

--- a/style.css
+++ b/style.css
@@ -1436,7 +1436,7 @@ Version: 0.1
 =================================================*/
 	
 	.search-results .search-term { font: 300 24px/1.1 proxima-nova,sans-serif; }
-	.search-results #content section h1 { margin: 0; padding: 5px 0 0; font: 400 16px/1 proxima-nova,sans-serif; text-transform: uppercase; border-top: 4px solid #ccc;  }
+	.search-results #content section h1 { margin: 0; padding: 10px 0 0; font: 400 16px/1 proxima-nova,sans-serif; text-transform: uppercase; border-top: 4px solid #ccc;  }
 	.search-results #content article { margin: 10px 0; padding: 0; border-width: 1px 0 0; }
 	.search-results #content article p { font-size: 14px; }
 	.search-results #content .post-meta h6 { font-style: normal; text-transform: uppercase; }
